update final report

--- a/notebooks/final_report/final_report.ipynb
+++ b/notebooks/final_report/final_report.ipynb
@@ -2,23 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f50ef94",
-   "metadata": {},
-   "source": [
-    "Report\n",
-    "Your final report consists of a narrative text that explains what you did, why you did it, and how you went about it. You should break the notebook up into the following meaningful sections so that the instructor can follow the logical flow of your work:\n",
-    "\n",
-    "Background and Motivation: Provide some context for the problem and what research question(s) you set out to answer, or the hypothesis you are testing.\n",
-    "\n",
-    "Methodology: How did you go about answering your research question(s) or testing your hypothesis? What models did you use and why? How do you know that your model is performing well? Use schematics and figures where necessary to explain concepts.\n",
-    "\n",
-    "Results: What did you find when you carried out your methods? Support your work with visuals.\n",
-    "\n",
-    "Synthesis and Discussion: What did you learn from your results? What obstacles did you run into? What would you do differently next time? What is the answer to your question(s) and why?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "eb0070a3",
    "metadata": {},
    "source": [
@@ -247,7 +230,7 @@
    "source": [
     "The heatmap also shows the relationship of the features with each other. For example, Phi and Kappa2 have a 0.99 PCC, indicating a strong positive relationship. Most importantly, all selected descriptors exhibited a non-zero PCC with RG2, confirming that each feature has an impact on our target and should be captured in our traind models. \n",
     "\n",
-    "TO examine feature distributions, we plotted the histograms of our raw feature and target data:"
+    "To examine feature distributions, we plotted the histograms of our raw feature and target data:"
    ]
   },
   {
@@ -307,7 +290,7 @@
     "\n",
     "* `hidden_layer_size`: (10,), (10, 20), (20,30), (10, 20, 30)\n",
     "* `batch_size`: 100, 200, 500\n",
-    "* `learning_rate_init`: 0.01, 0.05, 0.\n",
+    "* `learning_rate_init`: 0.01, 0.05, 0.1\n",
     "\n",
     "All five models were evaluated using $R^2$, RMSE, MSE, MAE, AND PC on the validation and testing set, as summarized below:"
    ]
